# lib/api-spec/openapi.yaml
@@ -564,6 +564,9 @@ components:
           minLength: 6
         name:
           type: string
+        role:
+          type: string
+          enum: [trainer, client]
       required:
         - email
         - password
@@ -590,6 +593,11 @@ components:
           type: string
         name:
           type: string
+        username:
+          type: string
+        role:
+          type: string
+          enum: [trainer, client]
         createdAt:
           type: string
           format: date-time
@@ -597,6 +605,7 @@ components:
         - id
         - email
         - name
+        - role
         - createdAt
 
     AuthResponse:
